[package]
name = "async_bench"
version = "0.1.0"
authors = ["Xiangpeng Hao <xha62@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"
structopt = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
